--- a/index.html
+++ b/index.html
@@ -67,8 +67,6 @@
 				<p>Réponse à la question 2</p>
 			</div>
 		</section>
-		<div data-tf-widget="wRmbVh5R" data-tf-opacity="100" data-tf-iframe-props="title=My typeform" data-tf-transitive-search-params data-tf-medium="snippet" style="width:100%;height:500px;">
-		</div>
-		<script src="//embed.typeform.com/next/embed.js"></script>
+		<div data-tf-widget="wRmbVh5R" data-tf-opacity="100" data-tf-iframe-props="title=My typeform" data-tf-transitive-search-params data-tf-medium="snippet" style="width:100%;height:500px;"></div><script src="//embed.typeform.com/next/embed.js"></script>
 	</body>
 </html>
